# dapr_dev_template

./: .gitignore  README.md  docker-compose.yml
.github/workflows/: build_and_deploy.yml
dapr-components/: blob.yaml  dequeue.yaml  storage_queue.yaml
frontend/: README.md  buf.gen.yaml  package-lock.json  package.json
frontend/src/app/: store.ts
frontend/src/features/counter/: Counter.tsx
frontend/src/services/: client.ts  connectGrpcBaseQuery.ts  eliza.ts
infra/: README.md  containerapps.ts  index.ts  package-lock.json  package.json  registry.ts  resourceGroup.ts  vnet.ts
infra/registry/: index.ts
infra/resource_group/: index.ts
mysql/: my.cnf
nodejs/: .env.sample  Dockerfile  README.md  client.ts  package-lock.json  package.json  tsconfig.json
nodejs/prisma/: schema.prisma
nodejs/proto/: eliza.proto
nodejs/src/: connect.ts  index.ts
pulumi_archive/: Pulumi.dev.yaml  Pulumi.yaml  README.md  arm-template.example.json  dockerContainer.ts  tsconfig.json  vnet.ts
python/: Dockerfile  README.md  devcontainer.json  pyproject.toml
python/app/: main.py
terraform/: .terraform.lock.hcl  README.md  infra.tf
